src/test/deca/context/valid/with_object/INVALID.deca
class A extends B {}

-

Overrdide un field
