src/test/deca/context/invalid/with_object/assign_compatible.deca
class A {
    int a = 0;
}

class B extends A {
    int b = 0;
}

{
    B b = new A();
}